--- a/_pages/teaching.html
+++ b/_pages/teaching.html
@@ -1,6 +1,6 @@
 ---
 layout: archive
-title: "Teaching"
+title: "Community Services"
 permalink: /teaching/
 author_profile: true
 ---
@@ -9,4 +9,4 @@ author_profile: true
 
 {% for post in site.teaching reversed %}
   {% include archive-single.html %}
-{% endfor %}
+{% endfor %}s
